--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -23,3 +23,60 @@
   year={2014},
   publisher={Foundation for Open Access Statistics}
 }
+
+@Manual{dplyr:2018, 
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2018},
+    note = {R package version 0.7.7},
+    url = {https://CRAN.R-project.org/package=dplyr}
+}
+
+@article{allaire2015rmarkdown,
+  title={rmarkdown: Dynamic Documents for R},
+  author={Allaire, JJ and Cheng, Joe and Xie, Yihui and McPherson, Jonathan and Chang, Winston and Allen, Jeff and Wickham, Hadley and Atkins, Aron and Hyndman, Rob},
+  journal={R package version 0.5},
+  year={2015}
+}
+
+@article{wickham2014tidy,
+  title={Tidy data},
+  author={Wickham, Hadley and others},
+  journal={Journal of Statistical Software},
+  volume={59},
+  number={10},
+  pages={1--23},
+  year={2014},
+  publisher={Foundation for Open Access Statistics}
+}
+
+@Book{ggplot2:2016,
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    author = {Hadley Wickham},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {http://ggplot2.org}
+}
+
+@Manual{tidyr:2018,
+    title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
+    author = {Hadley Wickham and Lionel Henry},
+    year = {2018},
+    note = {http://tidyr.tidyverse.org, https://github.com/tidyverse/tidyr}
+}
+
+@Manual{stringr:2018,
+    title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+    author = {Hadley Wickham},
+    year = {2018},
+    note = {http://stringr.tidyverse.org, https://github.com/tidyverse/stringr}
+}
+
+@Manual{rvest:2016,
+    title = {rvest: Easily Harvest (Scrape) Web Pages},
+    author = {Hadley Wickham},
+    year = {2016},
+    note = {R package version 0.3.2},
+    url = {https://CRAN.R-project.org/package=rvest}
+}
