--- a/proposal/Team XSWL-proposal.Rmd
+++ b/proposal/Team XSWL-proposal.Rmd
@@ -7,9 +7,9 @@ abstract: |
           
 date: "November 19, 2018"
 author:
-  - Ziwei Liu
-  - Zepeng Xiao
-  - Yuquan Zheng
+  - Ziwei Liu (ziweil2)
+  - Zepeng Xiao (zepengx2)
+  - Yuquan Zheng (yzheng58)
 bibliography: bibliography.bib
 output: 
   bookdown::pdf_document2
@@ -56,40 +56,18 @@ One of the problems in trading on StockX is similar to that of traditional stock
 
 In completing this project, we expect to practice with programming techbiques prevailing in R, and experience collaborative development to come up with analysis and behavioural suggestions based on data, all of which adhere to the general purposes of this course as stated in the syllabus.
 
-- Consider adding subsections in this section. For example, consider adding
-a **data** subsection. The data subsection would describe your data. 
-What is it? Where did it come from? How will it be useful in answering your problem?
-
 
 # Related Work
 
-Our group has decided to do web scrapping from the begining, so it was only the matter of choosing a webpage that is easy to scrape from and which kind of analysis should we perform. Later we discovered our common interest in sneaker shoes, so that we decided to scrape StockX. As for the detailed contents, we decided to do visualizations for historical prices, and then we discovered a related study:
+Our group has decided to do web scrapping from the begining, so it was only the matter of choosing a webpage that is easy to scrape from and which kind of analysis should we perform. Later we discovered our common interest in sneaker shoes, so that we decided to scrape StockX. As for the detailed contents, we decided to do visualizations for historical prices, and then we discovered a related study [@ScrapingStockX:2016]:
 
-[Scraping StockX: Adidas Yeezy Resell Analysis.](https://nycdatascience.com/blog/student-works/scraping-stockx-adidas-yeezy-resell-analysis/) [@ScrapingStockX:2016]
-
-It offered a lot of ideas pertaining to scrapping and data analysis for a certain type of sneaker shoes. In ensuring originality, we decided to incorporate time-series analysis in order to give prediction about shoes prices. There have been similar analysis project focused on forecasting stock prices, and we think our originality lies in bringing this idea to the market of sneaker shoes.
+[Scraping StockX: Adidas Yeezy Resell Analysis.](https://nycdatascience.com/blog/student-works/scraping-stockx-adidas-yeezy-resell-analysis/) 
+which offered a lot of ideas pertaining to scrapping and data analysis for a certain type of sneaker shoes. In ensuring originality, we decided to incorporate time-series analysis in order to give prediction about shoes prices. There have been similar analysis project focused on forecasting stock prices, and we think our originality lies in bringing this idea to the market of sneaker shoes.
 
 
 # Methods
 
-<<<<<<< HEAD
-The main body of this project can be broken into three parts: construction of data by scrapping data from StockX, design and implementation of user interface and app server with `shiny`, and barplot/line graph visualizations of price information and prediction results with `ggplot2`. Our intended action is to perform time-series analysis through fitting ARIMA models (with built-in function `arima`) that is available in base R. The packages that need to be specifically loaded are:
-=======
-**The majority of your code should be _suppressed_ from the displaying in this section**. Please refer to code and figures placed in the appendix. The latter can be referenced using: 
-
-```
-Figure \@ref(fig:code-chunk-name-here).
-```
-
-For example, the figure of the data science workflow is accessible via
-Figure \@ref(fig:data-science-workflow).
-
-To satisfy this section, provide detailed responses for the following:
-
-- What packages will you use in your implementation?
-
 The main body of this project can be broken into three parts: construction of data by scrapping data from StockX, design and implementation of user interface and app server with `shiny`, and barplot/line graph visualizations of price information and prediction results with `ggplot2`. Our intended action is to perform time-series analysis (@ARIMAModels) through fitting ARIMA models (with built-in function `arima`) that is available in base R. The packages that need to be specifically loaded are:
->>>>>>> 54def954d39dfa98aac6534efce536d7844c979f
 
 1. ggplot2 @ggplot2:2016 for visualizations
 
@@ -137,7 +115,3 @@ knitr::include_graphics("images/sampledata.jpg")
 
 # References
 
-<<<<<<< HEAD
-
-=======
->>>>>>> 54def954d39dfa98aac6534efce536d7844c979f
